# pydantic-ai-assistant

./: .env-template  .gitignore  README.md  main.py  pydantic_agent.py  pyproject.toml
